api: Update model changes
