# pkg/api/rest/docs/swagger.json
@@ -456,6 +456,7 @@
         "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model.ContainerMigrationInfo": {
             "type": "object",
             "required": [
+                "container_id",
                 "container_image",
                 "container_status",
                 "name",
@@ -464,6 +465,9 @@
                 "runtime"
             ],
             "properties": {
+                "container_id": {
+                    "type": "string"
+                },
                 "container_image": {
                     "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model.ContainerImage"
                 },
@@ -754,7 +758,7 @@
             ],
             "properties": {
                 "architecture": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model.SoftwareArchitecture"
+                    "type": "string"
                 },
                 "custom_configs": {
                     "type": "array",
@@ -874,15 +878,19 @@
                 "common",
                 "x86_64",
                 "x86",
-                "arm",
-                "arm64"
+                "armv5",
+                "armv6",
+                "armv7",
+                "arm64v8"
             ],
             "x-enum-varnames": [
                 "SoftwareArchitectureCommon",
                 "SoftwareArchitectureX8664",
                 "SoftwareArchitectureX86",
-                "SoftwareArchitectureARM",
-                "SoftwareArchitectureARM64"
+                "SoftwareArchitectureARMv5",
+                "SoftwareArchitectureARMv6",
+                "SoftwareArchitectureARMv7",
+                "SoftwareArchitectureARM64v8"
             ]
         },
         "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model.SoftwareMigrateReq": {
